--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "types": "file:../../../../zod",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   }
